added row functionality

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,14 @@ body {
   align-items: center;
 }
 
+#pixelate {
+  text-align: center;
+}
+
+#add-row {
+  margin-bottom: 25px;
+}
+
 td {
   height: 50px;
   width: 50px;
@@ -21,13 +29,33 @@ td {
   transition: background-color 0.5s ease;
 }
 
-.red {background-color: red;}
-.orange {background-color: orange;}
-.yellow {background-color: yellow;}
-.green {background-color: green;}
-.blue {background-color: blue;}
-.indigo {background-color: indigo;}
-.violet {background-color: violet;}
-.black {background-color: black;}
-.white {background-color: white;}
-.brown {background-color: brown;}
+.red {
+  background-color: red;
+}
+.orange {
+  background-color: orange;
+}
+.yellow {
+  background-color: yellow;
+}
+.green {
+  background-color: green;
+}
+.blue {
+  background-color: blue;
+}
+.indigo {
+  background-color: indigo;
+}
+.violet {
+  background-color: violet;
+}
+.black {
+  background-color: black;
+}
+.white {
+  background-color: white;
+}
+.brown {
+  background-color: brown;
+}
